--- a/index.html
+++ b/index.html
@@ -58,23 +58,11 @@
     <!--start row 1-->
     <div class="container">
     <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-12">
 <br>            
     <!--content-->
-<h3>The Building Blocks of the Healthy food    
-<br>
-<br>
-  <li>the healthy whole-grain foods</li>
-  <li>dairy products</li>
-  <li>fresh fruits</li>
-  <li>fresh veggies</li>
-  <li>meat, poultry, fish, </li>
-  <li>dry beans, eggs, and nuts</li>
-  <li>fats, oils, and sweets sparingly</li></h3>
 
-</div>
-<div class="col-md-5">
-<img src="https://github.com/anastassiyas/WIREFRAME/blob/main/healthy%20food%201.png?raw=true"
+<img src="https://github.com/anastassiyas/WIREFRAME/blob/main/111.png?raw=true"
 width="340" height="280"alt="food">
 <!--end Row 1-->
 </div>
@@ -131,8 +119,29 @@ width="100" height="100" alt="non-food products">
 </section>      
 </br>
 </br>
-    
+<a href="https://www.everydayhealth.com/healthy-living/basics-of-healthy-living.aspx">
+  <img class="image" src="https://www.syfy.com/sites/syfy/files/styles/320x700_hero/public/2019/10/devils-advocate.jpg" width="320" height="180"></a>
+  </h2>
+  
+<iframe width="320" height="180" src="https://www.youtube.com/embed/VH3VFi9C4Z0"
+ title="YouTube video player" frameborder="5" allow="accelerometer; autoplay;
+  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe> 
+  
+<iframe width="320" height="180" src="https://www.youtube.com/embed/Acs7ZnIdo4o"
+ title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; 
+ clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="320" height="180" src="https://www.youtube.com/embed/APwwGy4GzK8"
+ title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; 
+ clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+    <footer>
+    <br>
+    <hr>
 
+        Copyright Anastassiya Savostina
+    </footer>
     
 
 
