--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@ width="100" height="100" alt="non-food products">
 <div class="col-md-11">
 <br>
 <br>
-<a href="https://www.everydayhealth.com/healthy-living/basics-of-healthy-living.aspx">
-<img class="image" src="https://github.com/anastassiyas/WIREFRAME/blob/main/333333.png?raw=true" 
-width="320" height="180">How to Eat a Healthy Diet</a>
+
 </div>
 </div>
   
@@ -135,10 +133,9 @@ width="320" height="180">How to Eat a Healthy Diet</a>
 </iframe> 
 </div>
 <div class="flexbox-item flextwo">
-<iframe width="320" height="180" src="https://www.youtube.com/embed/Acs7ZnIdo4o"
-title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; 
-clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe>
+<a href="https://www.everydayhealth.com/healthy-living/basics-of-healthy-living.aspx">
+<img class="image" src="https://github.com/anastassiyas/WIREFRAME/blob/main/333333.png?raw=true" 
+width="320" height="170"></a>
 </div>
 <div class="flexbox-item flexthree">
 <iframe width="320" height="180" src="https://www.youtube.com/embed/APwwGy4GzK8"
@@ -146,6 +143,7 @@ title="YouTube video player" frameborder="5" allow="accelerometer; autoplay;
 clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
  </iframe>
 </div>
+
 </div>
 <br> 
 
