--- a/country.html
+++ b/country.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="country.css">
-
+<nav>
+<a href="index.html">Home page</a>
+ </nav>      
     <title>Country wish list</title>
 </head>
 <body>
