--- a/country.html
+++ b/country.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="country.css">
 <nav>
-<a href="https://anastassiyas.github.io/DROPDOWN-MENU/index.html">Home page</a>
+<a href="https://anastassiyas.github.io/RECIPE-CARD/index.html">Home page</a>
  </nav>      
     <title>Country wish list</title>
 </head>
